# exercise

./: .gitignore  .gitmodules  README.md
1024/: Makefile  huarongdao.c  levels.json
apue/: Makefile
apue/01/: Makefile  cp_stdio.c  getc_putc.c  ls1.c  shell1.c  shell2.c  stat.c  stdin2stdout.c  stdout2stdin.c
apue/02/: Makefile  limits.c  open_max.c
apue/03/: Makefile  alloc_fd.c  atoi.c  dup.c  excl.c  file_hole.c  file_nohole.c  io_efficiency.c  lseek.c  lseek_append.c  lseek_write.c  multi_write.c  my_dup2.c  one_write.c  open.c  open_twice.c  read_file_flags.c  set_file_flags.c  stdout_stderr.c  sync_io_efficiency.c  two_write.c  write_exceed_limit.c  write_without_permission.c
apue/04/: 4_11_ftw.c  4_16_dir_loop.c  4_17_unlink_creat.c  4_1_file_type.c  4_2_umask.c  4_6_cp.c  Makefile  access.c  chdir_getcwd.c  chmod.c  file_type.c  fstatat.c  ftw.c  futimens.c  link.c  lstat.c  mkdir.c  open_and_unlink.c  remove.c  rename.c  rmdir.c  stat.c  symlink.c  truncate.c  umask.c  unlink.c  unlinkat.c
apue/05/: 5_1_setbuf.c  5_2_fgets.c  5_3_printf.c  Makefile  fgetc.c  fgets.c  fmemopen.c  fopen.c  fread.c  ftell.c  getc.c  mkstemp.c  printf.c  scanf.c  scanf_int.c  scanf_string.c  stdio_buffer.c  tmpnam.c  ungetc.c
apue/06/: 6_4_time.c  Makefile  clock_getres.c  clock_gettime.c  getgrent.c  getgrnam.c  getgroups.c  gethostname.c  getpwnam.c  getspnam.c  gettimeofday.c  gmtime.c  localtime.c  mktime.c  strftime.c  strptime.c  test_strftime.c  time.c  uname.c
apue/07/: Makefile  argv.c  atexit.c  double_free.c  environ.c  free_local_var.c  free_random.c  getenv.c  getrlimit.c  hello.c  hi.c  longjmp.c  loop_calloc.c  loop_malloc.c  mallinfo.c  overflow.c  putenv.c  setenv.c
apue/08/: Makefile  abort.c  divide_zero.c  echoall.c  exec.c  exec_interpreter_file.c  exit.c  fork.c  generate_accounting_data.c  getlogin.c  getpid.c  mypasswd.c  mysystem.c  orphan.c  pracct.c  race.c  setuid.c  test_nice.c  test_system.c  test_times.c  twice_fork.c  various_exit.c  vfork.c  wait4.c  wait_no_child.c  waitid.c  waitpid.c  zombie.c
apue/lib/: Makefile
cmake/step1/: CMakeLists.txt  sqrt.cpp
cmake/step2/: CMakeLists.txt  main.cpp
cmake/step3/: CMakeLists.txt  main.cpp
cmake/step3/math_functions/: CMakeLists.txt  mysqrt.cpp
cmake/step4/: CMakeLists.txt  main.cpp
cmake/step4/math_functions/: CMakeLists.txt
cmake/step5/: CMakeLists.txt  main.cpp
cmake/step5/math_functions/: CMakeLists.txt  mysqrt.cpp
cmake/step6/: CMakeLists.txt  main.cpp
cmake/step7/: CMakeLists.txt  License.txt
cmake/step7/math_functions/: CMakeLists.txt
cmake/step9/: CMakeLists.txt  main.cpp
cmake/step9/math_functions/: CMakeLists.txt  math_functions.cpp  math_functions.h  mysqrt.cpp
cpp_primer/: README.md
cpp_primer/00/: 01_ctor_decl_no_def.cpp  02_destroy_static_obj.cpp  Makefile
cpp_primer/01/: 01_02_main_ret.cpp  01_04_05_product.cpp  01_07_test_comment.cpp  01_09_multi_sum.cpp  01_10_print_num.cpp  01_11_print_num_from_user.cpp  01_13_multi_sum_use_for.cpp  01_13_print_num_from_user_for.cpp  01_13_print_num_use_for.cpp  01_15_test_compile_err.cpp  01_16_unknown_num_sum.cpp  01_20_read_book_sales.cpp  01_22_add_multi_items.cpp  01_23_count_items.cpp  add_items.cpp  count_items.cpp  count_num.cpp  cout_cerr.cpp  unknown_num_sum.cpp
cpp_primer/02/: 02_03_test_unsigned.cpp  02_08_print_2m.cpp  02_34_auto_var.cpp  02_35_auto_var.cpp  02_39_invalid_class.cpp  02_41_sales_data.cpp  02_42_sales_data.cpp  Sales_data.h
cpp_primer/03/: 03_04_compare_str.cpp  03_05_concatenate_str.cpp  03_06_char2X.cpp  03_07_char2X.cpp  03_08_char2X.cpp  03_09_access_null_str.cpp  03_10_del_punctuation.cpp  03_14_read_int_seq.cpp  03_15_read_str_seq.cpp  03_16_vector_size.cpp  03_17_read_words.cpp  03_20_print_pair.cpp  03_21_print_vectors.cpp  03_22_print_text.cpp  03_23_int_vector.cpp  03_24_print_pairs.cpp  03_25_grade.cpp  03_31_set_arr.cpp  03_32_copy_arr.cpp  03_35_memset_arr.cpp  03_36_compare_arr.cpp  03_39_strcmp.cpp  03_40_strcat.cpp  03_41_vector_from_arr.cpp  03_42_arr_from_vector.cpp  03_43_print_arr.cpp  03_44_print_arr_alias.cpp  03_45_print_arr_auto.cpp  bin_search.cpp  dec2hex.cpp  grade.cpp
cpp_primer/04/: 04_05_calc_expr.cpp  04_10_read_until_42.cpp  04_21_double_odd.cpp  04_22_grade.cpp  04_28_build_in_size.cpp  04_29_sizeof.cpp  04_31_set_arr.cpp  hello.cpp  modulus.cpp
cpp_primer/05/: 05_05_letter_grade.cpp  05_06_letter_grade.cpp  05_09_count_vowels_if.cpp  05_11_count_special_char.cpp  05_12_count_two_char.cpp  05_14_print_duplicated_word.cpp  05_16_while_for.cpp  05_17_vector_prefix.cpp  05_19_req_str.cpp  05_20_word_twice.cpp  05_21_word_twice_uppercase.cpp  05_23_divide.cpp  05_24_divide_throw_exp.cpp  05_25_divide_throw_catch.cpp  count_vowels.cpp
cpp_primer/06/: 06_03_fact.cpp  06_05_absolute.cpp  06_07_static_variable.cpp  06_09_fact.cpp  06_09_main.cpp  06_10_swap_value_by_ptr.cpp  06_11_reset.cpp  06_12_swap_value_by_ref.cpp  06_17_capital_lowercase.cpp  06_21_larger_value.cpp  06_22_swap_ptr.cpp  06_23_many_print.cpp  06_25_concat_input.cpp  06_27_elements_sum.cpp  06_30_str_subrange.cpp  06_33_recursive_print_vector.cpp  06_36_return_ten_str.cpp  06_37_return_ten_str.cpp  06_42_make_plural.cpp  06_44_shorter_str.cpp  06_47_print_vector_with_debug.cpp  06_51_overload_func.cpp  06_55_arithmetic.cpp  Chapter6.h  a.out  hello.cpp  hello.h  print_debug_info.cpp
cpp_primer/07/: 07_03_bookstore.cpp  07_11_test_constructors.cpp  07_13_bookstore.cpp  07_15_test_person.cpp  07_27_test_screen.cpp  07_31_pair_classes.cpp  07_32_Screen.h  07_32_clear_screen.cpp  07_41_Sales_data.h  07_41_test_delegating_constructors.cpp  07_43_nodefault.cpp  07_53_debug.cpp  07_57_account.cpp  My_Sales_data.h  Person.cpp  Person.h  Sales_data.cpp  Screen.h  a.out  struct_class.cpp
cpp_primer/08/: 08_01_read_istream.cpp  08_04_read_file_lines.cpp  Sales_data.h  (+8 more)
debug_art/: 01_insert_sort.c  Makefile
pearl/: 01_left_rotate.c  02_str_match.c  02_test_bc.cpp  03_qsort.c  04_permutation.cpp  05_list.c  06_byte_order.c  07_divide_zero.c  Makefile
unpv1/: Make.defines  Makefile  README.md
(+680 files in other folders)
